# AnchorHelper

./: .gitignore  CMakeLists.txt  anchorhelper-mac.icns  anchorhelper.desktop
dnssd/: CMakeLists.txt  dllmain.c  dnssd_clientstub.c
helper/: CMakeLists.txt  Connection.cpp  Connection.h  DB.cpp  DB.h  Discovery.cpp  Discovery.h  HelperApp.cpp  HelperApp.h  HelperFrame.cpp  HelperFrame.h  Shutdown.cpp  Shutdown.h  Socket.cpp  Socket.h  SocketCompat.c  SocketCompat.h  Thread.h  Types.h  Typess.h  crc16.cpp  crc16.h  handler_connection.h  rtls_interface.h  tools.cpp  tools.h
pthread/: CMakeLists.txt  implement.h
